      going through the scan_for_exiting code. This happens when an obit has been
      sent and the obit reply received by the PBS_BATCH_DeleteJob has not been 
      received from the server on the MOM. This fix allows the MOM to delete the
      job and free up resources even if the server for some reason does not send 
      the delete job request.

2.5.9
  e - change mom to only log "cannot find nvidia-smi in PATH" once when built
      with --enable-nvidia-gpus and running on a node that does not have Nvidia
      drivers installed.
  b - Change so gpu states get set/unset correctly. Fixes problems with multiple
      exclusive jobs being assigned to same gpu and where next job gets rejected
      because gpu state was not reset after last shared gpu job finished.
  e - Added a 1 millisecond sleep to src/lib/Libnet/net_client.c client_to_svr() 
      if connect fails with EADDRINTUSE EINVAL or EADDRNOTAVAIL case. For these cases
      TORQUE will retry the connect again. This fix increases the chance of success
      on the next iteration.
  b - Changes to decrease some gpu error messages and to detect unusual gpu
      drivers and configurations.
  b - Change so user cannot impersonate a different user when using munge.
  e - Added new option to torque.cfg name TRQ_IFNAME. This allows the user to designate
      a preferred outbound interface for TORQUE requests. The interface is the name 
      of the NIC interface, for example eth0.
  b - Fixed a problem in Munge where file descriptors were getting left open after failure
      cases and the munge process.
  e - Added instructions concerning the server parameter moab_array_compatible to the 
      README.array_changes file.
  e - Added a new function DIS_tcp_close to the the code. This takes care of a problem
      where TORQUE memory keeps growing because the read and write buffers associated
      with each tcparray entry would grow to accommodate incoming and outgoing data
      but would not shrink.